# Zephyr

./: .gitignore  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: Ci.yaml
Zephyr/include/Zephyr/Core/: Result.hpp
Zephyr/include/Zephyr/Pak/: PakTypes.hpp
Zephyr/src/Pak/: PakProfile.hpp
Zephyr/src/Pak/Codec/: IEntryCodec.hpp  IFooterCodec.hpp  IIndexCodec.hpp
tests/: CMakeLists.txt  TestHarness.hpp  test_ByteReader.cpp
